2022-09-05  Jay Berkenbilt  <ejb@ql.org>

        * Add a move constructor to Buffer, making it possible to move
        rather than copy the internal buffer. Thanks to jbarlow83 for the
        contribution.

2022-09-02  Jay Berkenbilt  <ejb@ql.org>

        * Add new QPDF::create() factory method that returns
        std::shared_ptr<QPDF>.

        * Prevent copying/assigning to QPDF objects in the API. It has
        never been safe to do this, but the API wasn't preventing it.

2022-09-01  Jay Berkenbilt  <ejb@ql.org>

        * Remove QPDFObject.hh from include/qpdf. The only reason to
        include was to get QPDFObject::object_type_e. Instead, include
        qpdf/Constants.h, and change `QPDFObject::ot_` to `::ot_`.

        * More optimizations and cleanup from m-holger (#726, #730)
        including major refactor of QPDF's internal representations of
        objects. In addition to a large performance improvement, this also
        made it possible for QPDFObjectHandle::getOwningQPDF() to return a
        null pointer if the owning QPDF had been destroyed. (A more
        complete solution to this problem will be introduced for qpdf 12.)
        This work also paves the way for a future alternative to
        QPDFObjectHandle that is more idiomatic C++ and has greater type
        safety.

2022-08-31  Jay Berkenbilt  <ejb@ql.org>

        * From m-holger (#729): refactor QPDF's parser into a new
        QPDFParser class, cleaning the code, significantly improving
        performance.

2022-08-27  Jay Berkenbilt  <ejb@ql.org>

        * From m-holger: major refactoring of QPDFTokenizer to improve
        readability and to optimize performance. This also included some
        optimizations to some InputSource classes. Thanks for this
        excellent contribution. Fixes #749, #442.

2022-08-07  Jay Berkenbilt  <ejb@ql.org>

        * Add new build configuration option ENABLE_QTC, which is off by