@@ -1,0 +1,13 @@
+Incorrect password supplied
+R = 2
+P = -64
+User password = 
+extract for accessibility: not allowed
+extract for any purpose: not allowed
+print low resolution: not allowed
+print high resolution: not allowed
+modify document assembly: not allowed
+modify forms: not allowed
+modify annotations: not allowed
+modify other: not allowed
+modify anything: not allowed
