@@ -147,9 +147,11 @@ foreach my $d (@unicode_pw_cases)
         }
         my $r_output = "";
         $r_output .= "trying other\n" if $tried_others;
+        my $arg = "--show-encryption";
         if ($xfail)
         {
             $r_output .= "qpdf: a.pdf: invalid password\n";
+            $arg = "--check";
         }
         else
         {
@@ -162,7 +164,7 @@ foreach my $d (@unicode_pw_cases)
         $r_xargs .= $strict ? ' --suppress-password-recovery' : '';
         $td->runtest("decrypt $pw, $r_encoding, strict=$strict",
                      {$td->COMMAND =>
-                          "qpdf --show-encryption --verbose" .
+                          "qpdf $arg --verbose" .
                           " $r_xargs a.pdf \@$r_pfile",
                           $td->FILTER => "perl show-unicode-encryption.pl"},
                      {$td->STRING => "$r_output",
